--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "@vuepress/plugin-google-analytics": "^1.0.0-alpha.47",
     "@vuepress/plugin-pwa": "^1.0.0-alpha.47",
     "vuepress": "^1.0.0-alpha.47"
+  },
+  "dependencies": {
+    "leancloud-storage": "^3.13.0",
+    "valine": "^1.3.6"
   }
 }
