添加travis-ci自动化部署

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "getname": "node utils/getFilenames.js"
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.47",
