--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "deploy": "bash deploy.sh",
+    "gitpush": "bash gitpush.sh",
     "getname": "node utils/getFilenames.js"
   },
   "devDependencies": {
