--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.47",
     "@vuepress/plugin-google-analytics": "^1.0.0-alpha.47",
     "@vuepress/plugin-pwa": "^1.0.0-alpha.47",
+    "cz-conventional-changelog": "^2.1.0",
     "vuepress": "^1.0.0-alpha.47"
   },
   "dependencies": {
     "leancloud-storage": "^3.13.0",
     "valine": "^1.3.6"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
