--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuepress": "^1.0.0-alpha.47"
   },
   "dependencies": {
+    "element-ui": "^2.12.0",
     "leancloud-storage": "^3.13.0",
     "valine": "^1.3.6"
   },
